--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -295,7 +295,8 @@
     "email_required": "Se requiere correo electrónico",
     "both_passwords_required": "Se requieren ambas contraseñas",
     "new_password": "Nueva contraseña",
-    "reset_failed": "No se pudo restablecer la contraseña"
+    "reset_failed": "No se pudo restablecer la contraseña",
+    "or_3rd_party": "O inicie sesión con un servicio de terceros"
   },
   "users": {
     "no_users_found": "No se encontraron usuarios con perfiles públicos."
@@ -369,7 +370,15 @@
     "csrf_failed": "No se pudo recuperar el token CSRF",
     "duplicate_email": "Esta dirección de correo electrónico ya está en uso.",
     "email_taken": "Esta dirección de correo electrónico ya está en uso.",
-    "username_taken": "Este nombre de usuario ya está en uso."
+    "username_taken": "Este nombre de usuario ya está en uso.",
+    "administration_settings": "Configuración de administración",
+    "documentation_link": "Enlace de documentación",
+    "launch_account_connections": "Iniciar conexiones de cuenta",
+    "launch_administration_panel": "Iniciar el panel de administración",
+    "no_verified_email_warning": "Debe tener una dirección de correo electrónico verificada para habilitar la autenticación de dos factores.",
+    "social_auth_desc": "Habilite o deshabilite los proveedores de autenticación social y OIDC para su cuenta. \nEstas conexiones le permiten iniciar sesión con proveedores de identidad de autenticación autohospedados como Authentik o proveedores externos como GitHub.",
+    "social_auth_desc_2": "Estas configuraciones se administran en el servidor AdventureLog y el administrador debe habilitarlas manualmente.",
+    "social_oidc_auth": "Autenticación social y OIDC"
   },
   "checklist": {
     "add_item": "Agregar artículo",
