--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -299,7 +299,20 @@
     "no_countries_found": "Nessun paese trovato",
     "not_visited": "Non visitato",
     "num_countries": "paesi trovati",
-    "partially_visited": "Parzialmente visitato"
+    "partially_visited": "Parzialmente visitato",
+    "all_visited": "Hai visitato tutte le regioni in",
+    "cities": "città",
+    "failed_to_mark_visit": "Impossibile contrassegnare la visita a",
+    "failed_to_remove_visit": "Impossibile rimuovere la visita a",
+    "marked_visited": "contrassegnato come visitato",
+    "no_cities_found": "Nessuna città trovata",
+    "region_failed_visited": "Impossibile contrassegnare la regione come visitata",
+    "region_stats": "Statistiche della regione",
+    "regions_in": "Regioni dentro",
+    "removed": "RIMOSSO",
+    "view_cities": "Visualizza città",
+    "visit_remove_failed": "Impossibile rimuovere la visita",
+    "visit_to": "Visita a"
   },
   "settings": {
     "account_settings": "Impostazioni dell'account utente",
@@ -378,7 +391,9 @@
     "no_verified_email_warning": "È necessario disporre di un indirizzo e-mail verificato per abilitare l'autenticazione a due fattori.",
     "social_auth_desc": "Abilita o disabilita i provider di autenticazione social e OIDC per il tuo account. \nQueste connessioni ti consentono di accedere con provider di identità di autenticazione self-hosted come Authentik o provider di terze parti come GitHub.",
     "social_auth_desc_2": "Queste impostazioni sono gestite nel server AdventureLog e devono essere abilitate manualmente dall'amministratore.",
-    "social_oidc_auth": "Autenticazione sociale e OIDC"
+    "social_oidc_auth": "Autenticazione sociale e OIDC",
+    "add_email": "Aggiungi e-mail",
+    "password_too_short": "La password deve contenere almeno 6 caratteri"
   },
   "checklist": {
     "add_item": "Aggiungi articolo",
