--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -217,7 +217,8 @@
     "to": "À",
     "transportation_delete_confirm": "Etes-vous sûr de vouloir supprimer ce transport ? \nCette action ne peut pas être annulée.",
     "show_map": "Afficher la carte",
-    "will_be_marked": "sera marqué comme visité une fois l’aventure sauvegardée."
+    "will_be_marked": "sera marqué comme visité une fois l’aventure sauvegardée.",
+    "cities_updated": "villes mises à jour"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -497,7 +498,8 @@
     "member_since": "Membre depuis",
     "user_stats": "Statistiques des utilisateurs",
     "visited_countries": "Pays visités",
-    "visited_regions": "Régions visitées"
+    "visited_regions": "Régions visitées",
+    "visited_cities": "Villes visitées"
   },
   "categories": {
     "category_name": "Nom de la catégorie",
@@ -515,7 +517,8 @@
     "recent_adventures": "Aventures récentes",
     "total_adventures": "Aventures totales",
     "total_visited_regions": "Total des régions visitées",
-    "welcome_back": "Content de te revoir"
+    "welcome_back": "Content de te revoir",
+    "total_visited_cities": "Total des villes visitées"
   },
   "immich": {
     "api_key": "Clé API Immich",
