--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -217,7 +217,8 @@
     "to": "Till",
     "transportation_delete_confirm": "Är du säker på att du vill ta bort denna transport? \nDenna åtgärd kan inte ångras.",
     "show_map": "Visa karta",
-    "will_be_marked": "kommer att markeras som besökt när äventyret har sparats."
+    "will_be_marked": "kommer att markeras som besökt när äventyret har sparats.",
+    "cities_updated": "städer uppdaterade"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -497,7 +498,8 @@
     "member_since": "Medlem sedan",
     "user_stats": "Användarstatistik",
     "visited_countries": "Besökta länder",
-    "visited_regions": "Besökta regioner"
+    "visited_regions": "Besökta regioner",
+    "visited_cities": "Besökte städer"
   },
   "categories": {
     "category_name": "Kategorinamn",
@@ -515,7 +517,8 @@
     "recent_adventures": "Senaste äventyr",
     "total_adventures": "Totala äventyr",
     "total_visited_regions": "Totalt antal besökta regioner",
-    "welcome_back": "Välkommen tillbaka"
+    "welcome_back": "Välkommen tillbaka",
+    "total_visited_cities": "Totalt antal besökta städer"
   },
   "immich": {
     "api_key": "Immich API-nyckel",
