--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -185,12 +185,14 @@
 		"no_description_found": "No description found",
 		"adventure_created": "Adventure created",
 		"adventure_create_error": "Failed to create adventure",
+		"create_adventure": "Create Adventure",
 		"adventure_updated": "Adventure updated",
 		"adventure_update_error": "Failed to update adventure",
 		"set_to_pin": "Set to Pin",
 		"category_fetch_error": "Error fetching categories",
 		"new_adventure": "New Adventure",
 		"basic_information": "Basic Information",
+		"no_adventures_to_recommendations": "No adventures found. Add at leat one adventure to get recommendations.",
 		"adventure_not_found": "There are no adventures to display. Add some using the plus button at the bottom right or try changing filters!",
 		"no_adventures_found": "No adventures found",
 		"mark_region_as_visited": "Mark region {region}, {country} as visited?",
