--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -218,7 +218,9 @@
     "ending_airport": "Einde luchthaven",
     "show_map": "Toon kaart",
     "will_be_marked": "wordt gemarkeerd als bezocht zodra het avontuur is opgeslagen.",
-    "cities_updated": "steden bijgewerkt"
+    "cities_updated": "steden bijgewerkt",
+    "create_adventure": "Creëer avontuur",
+    "no_adventures_to_recommendations": "Geen avonturen gevonden. \nVoeg ten minste één avontuur toe om aanbevelingen te krijgen."
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
