--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -265,7 +265,9 @@
     "transportation_delete_confirm": "Czy na pewno chcesz usunąć ten transport? \nTej akcji nie można cofnąć.",
     "show_map": "Pokaż mapę",
     "will_be_marked": "zostanie oznaczona jako odwiedzona po zapisaniu przygody.",
-    "cities_updated": "miasta zaktualizowane"
+    "cities_updated": "miasta zaktualizowane",
+    "create_adventure": "Stwórz przygodę",
+    "no_adventures_to_recommendations": "Nie znaleziono żadnych przygód. \nDodaj co najmniej jedną przygodę, aby uzyskać rekomendacje."
   },
   "worldtravel": {
     "country_list": "Lista krajów",
